Room server and client pass basic game info messages.